--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
+    "mysql2": "^3.11.0",
     "node-cron": "^3.0.3",
     "p-limit": "^5.0.0",
     "ws": "^8.17.1"
