--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "node-cron": "^3.0.3",
     "p-limit": "^5.0.0",
