--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^3.11.0",
     "node-cron": "^3.0.3",
     "p-limit": "^5.0.0",
+    "sequelize": "^6.37.3",
     "ws": "^8.17.1"
   },
   "devDependencies": {
